# glcParaFNC

./: .gitignore  ArranjoBin.cpp  ArranjoBin.hpp  CMakeLists.txt  Glc.cpp  Glc.hpp  LICENSE  README.md  entrada.txt  main.cpp
